Changed project settings to lower package sizes. Also tweaked water :3

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -9,9 +9,9 @@ InsertPack=(PackSource="StarterContent.upack,PackName="StarterContent")
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
 StagingDirectory=(Path="C:/Users/Asus/Desktop/Prototype Demo")
-FullRebuild=False
+FullRebuild=True
 ForDistribution=False
-IncludeDebugFiles=False
+IncludeDebugFiles=True
 BlueprintNativizationMethod=Disabled
 bIncludeNativizedAssetsInProjectGeneration=False
 bExcludeMonolithicEngineHeadersInNativizedCode=False
@@ -24,8 +24,8 @@ HttpChunkInstallDataDirectory=(Path="")
 HttpChunkInstallDataVersion=
 IncludePrerequisites=True
 IncludeAppLocalPrerequisites=False
-bShareMaterialShaderCode=False
-bSharedMaterialNativeLibraries=False
+bShareMaterialShaderCode=True
+bSharedMaterialNativeLibraries=True
 ApplocalPrerequisitesDirectory=(Path="")
 IncludeCrashReporter=False
 InternationalizationPreset=English
@@ -33,11 +33,12 @@ InternationalizationPreset=English
 +CulturesToStage=en
 bCookAll=False
 bCookMapsOnly=False
-bCompressed=False
+bCompressed=True
 bEncryptIniFiles=False
 bEncryptPakIndex=False
 bSkipEditorContent=False
 bSkipMovies=False
++MapsToCook=(FilePath="/Game/Levels/PrototypeDemo")
 bNativizeBlueprintAssets=False
 bNativizeOnlySelectedBlueprints=False
 
