--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -29,6 +29,21 @@ SteamDevAppId=480
 [/Script/OnlineSubsystemSteam.SteamNetDriver]
 NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 
+[/Script/NavigationSystem.NavigationSystemV1]
+CrowdManagerClass=Class'/Script/AIModule.CrowdManager'
+bAutoCreateNavigationData=True
+bSpawnNavDataInNavBoundsLevel=False
+bAllowClientSideNavigation=False
+bShouldDiscardSubLevelNavData=True
+bTickWhilePaused=False
+bInitialBuildingLocked=False
+bSkipAgentHeightCheckWhenPickingNavData=False
+DataGatheringMode=Instant
+bGenerateNavigationOnlyAroundNavigationInvokers=False
+ActiveTilesUpdateInterval=1.000000
++SupportedAgents=(Name="Default",Color=(B=0,G=255,R=140,A=164),DefaultQueryExtent=(X=50.000000,Y=50.000000,Z=250.000000),NavigationDataClassName=/Script/NavigationSystem.RecastNavMesh,AgentRadius=8.000000,AgentHeight=32.000000,AgentStepHeight=-1.000000,NavWalkingSearchHeightScale=0.500000,PreferredNavData=/Script/NavigationSystem.RecastNavMesh,bCanCrouch=False,bCanJump=False,bCanWalk=False,bCanSwim=False,bCanFly=False)
+DirtyAreasUpdateFreq=60.000000
+
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
 -Profiles=(Name="BlockAll",CollisionEnabled=QueryAndPhysics,ObjectTypeName="WorldStatic",CustomResponses=,HelpMessage="WorldStatic object that blocks all actors by default. All new custom channels will use its own default response. ",bCanModify=False)
@@ -71,6 +86,7 @@ NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel3,Name="Character",DefaultResponse=ECR_Ignore,bTraceType=True,bStaticObject=False)
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel4,Name="CharacterObj",DefaultResponse=ECR_Ignore,bTraceType=False,bStaticObject=False)
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel5,Name="Item",DefaultResponse=ECR_Ignore,bTraceType=True,bStaticObject=False)
++DefaultChannelResponses=(Channel=ECC_GameTraceChannel6,Name="Char/Item/Floor",DefaultResponse=ECR_Ignore,bTraceType=True,bStaticObject=False)
 -ProfileRedirects=(OldName="BlockingVolume",NewName="InvisibleWall")
 -ProfileRedirects=(OldName="InterpActor",NewName="IgnoreOnlyPawn")
 -ProfileRedirects=(OldName="StaticMeshComponent",NewName="BlockAllDynamic")
@@ -89,22 +105,6 @@ NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 +CollisionChannelRedirects=(OldName="Dynamic",NewName="WorldDynamic")
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
-
-<<<<<<< HEAD
-[/Script/NavigationSystem.NavigationSystemV1]
-CrowdManagerClass=Class'/Script/AIModule.CrowdManager'
-bAutoCreateNavigationData=True
-bSpawnNavDataInNavBoundsLevel=False
-bAllowClientSideNavigation=False
-bShouldDiscardSubLevelNavData=True
-bTickWhilePaused=False
-bInitialBuildingLocked=False
-bSkipAgentHeightCheckWhenPickingNavData=False
-DataGatheringMode=Instant
-bGenerateNavigationOnlyAroundNavigationInvokers=False
-ActiveTilesUpdateInterval=1.000000
-+SupportedAgents=(Name="Default",Color=(B=0,G=255,R=140,A=164),DefaultQueryExtent=(X=50.000000,Y=50.000000,Z=250.000000),NavigationDataClassName=/Script/NavigationSystem.RecastNavMesh,AgentRadius=8.000000,AgentHeight=32.000000,AgentStepHeight=-1.000000,NavWalkingSearchHeightScale=0.500000,PreferredNavData=/Script/NavigationSystem.RecastNavMesh,bCanCrouch=False,bCanJump=False,bCanWalk=False,bCanSwim=False,bCanFly=False)
-DirtyAreasUpdateFreq=60.000000
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
