--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -52,6 +52,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Press W",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=W)
 +ActionMappings=(ActionName="Press E",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
 +ActionMappings=(ActionName="Press R",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=R)
++ActionMappings=(ActionName="Press F1",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F1)
++ActionMappings=(ActionName="Press SpaceBar",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +AxisMappings=(AxisName="MoveFoward",Scale=1.000000,Key=Up)
 +AxisMappings=(AxisName="MoveFoward",Scale=-1.000000,Key=Down)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=Right)
