Multiplayer Alpha System

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,11 @@
 [URL]
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/PrototypeDemo.PrototypeDemo
-GameDefaultMap=/Game/Maps/PrototypeDemo.PrototypeDemo
+GameDefaultMap=/Game/Maps/MainMenu.MainMenu
 bUseSplitscreen=True
-GlobalDefaultGameMode=/Game/Blueprint/MyGamemode.MyGameMode_C
+GlobalDefaultGameMode=/Script/Engine.GameModeBase
+GameInstanceClass=/Game/Blueprint/MyGameInstance.MyGameInstance_C
+TransitionMap=/Game/Maps/TransitionMap.TransitionMap
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
