--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -6,6 +6,7 @@ bUseSplitscreen=True
 GlobalDefaultGameMode=/Script/Engine.GameModeBase
 GameInstanceClass=/Game/Blueprint/MyGameInstance.MyGameInstance_C
 TransitionMap=/Game/Maps/TransitionMap.TransitionMap
+ServerDefaultMap=/Game/Maps/Main.Main
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -152,5 +153,4 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
 
