Created Empty C++ file

--- a/Semester4_Game.uproject
+++ b/Semester4_Game.uproject
@@ -3,6 +3,13 @@
 	"EngineAssociation": "4.20",
 	"Category": "",
 	"Description": "",
+	"Modules": [
+		{
+			"Name": "Semester4_Game",
+			"Type": "Runtime",
+			"LoadingPhase": "Default"
+		}
+	],
 	"Plugins": [
 		{
 			"Name": "OnlineSubsystemIOS",
