Attack + Item Pickup

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,5 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=C5506A194FC0E087CDDF588F1DEDE3E2
+ProjectName=WizardGame
 
 [StartupActions]
 bAddPacks=True
@@ -41,4 +42,3 @@ bSkipMovies=False
 +MapsToCook=(FilePath="/Game/Levels/PrototypeDemo")
 bNativizeBlueprintAssets=False
 bNativizeOnlySelectedBlueprints=False
-
