--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -58,6 +58,8 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="MoveFoward",Scale=-1.000000,Key=Down)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=Right)
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=Left)
++AxisMappings=(AxisName="serverMove",Scale=1.000000,Key=A)
++AxisMappings=(AxisName="serverMove",Scale=-1.000000,Key=S)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 ConsoleKey=None
 -ConsoleKeys=Tilde
