--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -60,6 +60,7 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=Left)
 +AxisMappings=(AxisName="serverMove",Scale=1.000000,Key=A)
 +AxisMappings=(AxisName="serverMove",Scale=-1.000000,Key=S)
++AxisMappings=(AxisName="Space Bar Axis",Scale=1.000000,Key=SpaceBar)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 ConsoleKey=None
 -ConsoleKeys=Tilde
