Fix Camera Stuttering and Camera Movement Speed Issue cause by FPS settings/Delta Time. UI and Navigation is still messy

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -111,6 +111,11 @@ DirtyAreasUpdateFreq=60.000000
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 +CollisionChannelRedirects=(OldName="Character",NewName="Enemy")
 
+[/Script/Engine.Engine]
+bSmoothFrameRate=False
+bUseFixedFrameRate=False
+FixedFrameRate=60.000000
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
@@ -155,5 +160,3 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
-
