LAN system update (need testing)

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -6,7 +6,7 @@ bUseSplitscreen=True
 GlobalDefaultGameMode=/Script/Engine.GameModeBase
 GameInstanceClass=/Game/Blueprint/MyGameInstance.MyGameInstance_C
 TransitionMap=/Game/Maps/TransitionMap.TransitionMap
-ServerDefaultMap=/Game/Maps/MainMenu.MainMenu
+ServerDefaultMap=/Game/Maps/LobbyMap.LobbyMap
 GlobalDefaultServerGameMode=/Script/Engine.GameModeBase
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
