--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -9,7 +9,7 @@ InsertPack=(PackSource="StarterContent.upack,PackName="StarterContent")
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
-StagingDirectory=(Path="C:/Users/Asus/Desktop/Prototype Demo")
+StagingDirectory=(Path="D:/zackwong/Documents/Unreal Projects/GameBuild")
 FullRebuild=True
 ForDistribution=False
 IncludeDebugFiles=True
@@ -40,5 +40,7 @@ bEncryptPakIndex=False
 bSkipEditorContent=False
 bSkipMovies=False
 +MapsToCook=(FilePath="/Game/Levels/PrototypeDemo")
++MapsToCook=(FilePath="/Game/Maps/Main")
 bNativizeBlueprintAssets=False
 bNativizeOnlySelectedBlueprints=False
+
