Change Maps Included During Packaging

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -9,7 +9,7 @@ InsertPack=(PackSource="StarterContent.upack,PackName="StarterContent")
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
-StagingDirectory=(Path="D:/zackwong/Documents/Unreal Projects/GameBuild")
+StagingDirectory=(Path="D:/zackwong/Documents/Unreal Projects/GameBuild/WindowsNoEditor")
 FullRebuild=True
 ForDistribution=False
 IncludeDebugFiles=True
@@ -39,8 +39,12 @@ bEncryptIniFiles=False
 bEncryptPakIndex=False
 bSkipEditorContent=False
 bSkipMovies=False
-+MapsToCook=(FilePath="/Game/Levels/PrototypeDemo")
++MapsToCook=(FilePath="/Game/Maps/Blockout")
 +MapsToCook=(FilePath="/Game/Maps/Main")
++MapsToCook=(FilePath="/Game/Maps/MainMenu")
++MapsToCook=(FilePath="/Game/Maps/TransitionMap")
++MapsToCook=(FilePath="/Game/Maps/LobbyMap")
 bNativizeBlueprintAssets=False
 bNativizeOnlySelectedBlueprints=False
+
 
