Optimize landscape and foliage in Blockout.umap

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -19,6 +19,11 @@ AppliedDefaultGraphicsPerformance=Maximum
 r.DefaultFeature.AutoExposure=False
 r.CustomDepth=3
 r.GenerateMeshDistanceFields=True
+r.DiscardUnusedQuality=True
+r.MinScreenRadiusForDepthPrepass=0.050000
+r.MinScreenRadiusForCSMDepth=0.050000
+r.MinScreenRadiusForLights=0.050000
+r.DefaultFeature.MotionBlur=False
 
 [/Script/Engine.GameEngine]
 +NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemSteam.SteamNetDriver",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
@@ -107,6 +112,21 @@ MinRegionArea=1.000000
 AgentRadius=40.000000
 AgentHeight=88.000000
 
+[/Script/NavigationSystem.NavigationSystemV1]
+CrowdManagerClass=Class'/Script/AIModule.CrowdManager'
+bAutoCreateNavigationData=True
+bSpawnNavDataInNavBoundsLevel=False
+bAllowClientSideNavigation=False
+bShouldDiscardSubLevelNavData=True
+bTickWhilePaused=False
+bInitialBuildingLocked=False
+bSkipAgentHeightCheckWhenPickingNavData=False
+DataGatheringMode=Instant
+bGenerateNavigationOnlyAroundNavigationInvokers=False
+ActiveTilesUpdateInterval=1.000000
++SupportedAgents=(Name="Default",Color=(B=0,G=255,R=140,A=164),DefaultQueryExtent=(X=50.000000,Y=50.000000,Z=250.000000),NavigationDataClassName=/Script/NavigationSystem.RecastNavMesh,AgentRadius=40.000000,AgentHeight=88.000000,AgentStepHeight=-1.000000,NavWalkingSearchHeightScale=0.500000,PreferredNavData=/Script/NavigationSystem.RecastNavMesh,bCanCrouch=False,bCanJump=False,bCanWalk=True,bCanSwim=False,bCanFly=False)
+DirtyAreasUpdateFreq=60.000000
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
@@ -151,20 +171,3 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
-[/Script/NavigationSystem.NavigationSystemV1]
-CrowdManagerClass=Class'/Script/AIModule.CrowdManager'
-bAutoCreateNavigationData=True
-bSpawnNavDataInNavBoundsLevel=False
-bAllowClientSideNavigation=False
-bShouldDiscardSubLevelNavData=True
-bTickWhilePaused=False
-bInitialBuildingLocked=False
-bSkipAgentHeightCheckWhenPickingNavData=False
-DataGatheringMode=Instant
-bGenerateNavigationOnlyAroundNavigationInvokers=False
-ActiveTilesUpdateInterval=1.000000
-+SupportedAgents=(Name="Default",Color=(B=0,G=255,R=140,A=164),DefaultQueryExtent=(X=50.000000,Y=50.000000,Z=250.000000),NavigationDataClassName=/Script/NavigationSystem.RecastNavMesh,AgentRadius=40.000000,AgentHeight=88.000000,AgentStepHeight=-1.000000,NavWalkingSearchHeightScale=0.500000,PreferredNavData=/Script/NavigationSystem.RecastNavMesh,bCanCrouch=False,bCanJump=False,bCanWalk=True,bCanSwim=False,bCanFly=False)
-DirtyAreasUpdateFreq=60.000000
-
-
