server fix (default gamemode change)

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,11 +3,11 @@
 EditorStartupMap=/Game/Maps/MainMenu.MainMenu
 GameDefaultMap=/Game/Maps/MainMenu.MainMenu
 bUseSplitscreen=True
-GlobalDefaultGameMode=/Script/Engine.GameModeBase
+GlobalDefaultGameMode=/Game/Blueprint/MainMenu/MainMenuGameMode.MainMenuGameMode_C
 GameInstanceClass=/Game/Blueprint/MyGameInstance.MyGameInstance_C
 TransitionMap=/Game/Maps/TransitionMap.TransitionMap
 ServerDefaultMap=/Game/Maps/LobbyMap.LobbyMap
-GlobalDefaultServerGameMode=/Script/Engine.GameModeBase
+GlobalDefaultServerGameMode=/Game/Blueprint/MainMenu/MainMenuGameMode.MainMenuGameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
