Add New Maps to be included in packaging

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -39,11 +39,12 @@ bEncryptIniFiles=False
 bEncryptPakIndex=False
 bSkipEditorContent=False
 bSkipMovies=False
-+MapsToCook=(FilePath="/Game/Maps/Blockout")
 +MapsToCook=(FilePath="/Game/Maps/Main")
 +MapsToCook=(FilePath="/Game/Maps/MainMenu")
 +MapsToCook=(FilePath="/Game/Maps/TransitionMap")
 +MapsToCook=(FilePath="/Game/Maps/LobbyMap")
++MapsToCook=(FilePath="/Game/Maps/TestMaps/TestMap_Persistent")
++MapsToCook=(FilePath="/Game/Maps/MainLevel/MainLevel_Persistent")
 bNativizeBlueprintAssets=False
 bNativizeOnlySelectedBlueprints=False
 
