Character Melee Range & Singleplayer Map to DemoMap

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -45,6 +45,7 @@ bSkipMovies=False
 +MapsToCook=(FilePath="/Game/Maps/LobbyMap")
 +MapsToCook=(FilePath="/Game/Maps/TestMaps/TestMap_Persistent")
 +MapsToCook=(FilePath="/Game/Maps/MainLevel/MainLevel_Persistent")
++MapsToCook=(FilePath="/Game/Maps/DemoB/DemoB_Persistent")
 bNativizeBlueprintAssets=False
 bNativizeOnlySelectedBlueprints=False
 
