Change to new name and add description

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,6 +1,10 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=C5506A194FC0E087CDDF588F1DEDE3E2
-ProjectName=WizardGame
+ProjectName=Little Bloom
+ProjectVersion=0.2.0.0
+CompanyName=The Tangerine Games
+Homepage="https://thetangerine.itch.io/"
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "C5F7BEDD46F3453E3C5B3188263BBDAF", "Little Bloom Pre-Alpha Demo v2")
 
 [StartupActions]
 bAddPacks=True
@@ -48,5 +52,3 @@ bSkipMovies=False
 +MapsToCook=(FilePath="/Game/Maps/DemoB/DemoB_Persistent")
 bNativizeBlueprintAssets=False
 bNativizeOnlySelectedBlueprints=False
-
-
