Replace all referencecs of old project name in source files

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -102,6 +102,7 @@ NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 +CollisionChannelRedirects=(OldName="Character",NewName="Enemy")
 
 [/Script/Engine.Engine]
++ActiveGameNameRedirects=(Semester4_Game="/Script/Semester4_Game", Little_Bloom="/Script/Little_Bloom")
 bSmoothFrameRate=False
 bUseFixedFrameRate=False
 FixedFrameRate=60.000000
