--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -13,7 +13,7 @@ InsertPack=(PackSource="StarterContent.upack,PackName="StarterContent")
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
-StagingDirectory=(Path="D:/zackwong/Documents/Unreal Projects/GameBuild/WindowsNoEditor")
+StagingDirectory=(Path="")
 FullRebuild=True
 ForDistribution=False
 IncludeDebugFiles=True
@@ -52,3 +52,4 @@ bSkipMovies=False
 +MapsToCook=(FilePath="/Game/Maps/DemoB/DemoB_Persistent")
 bNativizeBlueprintAssets=False
 bNativizeOnlySelectedBlueprints=False
+
