--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -55,13 +55,17 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Press F1",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F1)
 +ActionMappings=(ActionName="Press SpaceBar",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="Press F",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
-+AxisMappings=(AxisName="MoveFoward",Scale=1.000000,Key=Up)
-+AxisMappings=(AxisName="MoveFoward",Scale=-1.000000,Key=Down)
++ActionMappings=(ActionName="Continue",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Enter)
++ActionMappings=(ActionName="Continue",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
++AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Up)
++AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=Down)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=Right)
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=Left)
 +AxisMappings=(AxisName="serverMove",Scale=1.000000,Key=A)
 +AxisMappings=(AxisName="serverMove",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="Space Bar Axis",Scale=1.000000,Key=SpaceBar)
++AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=MouseY)
++AxisMappings=(AxisName="Turn",Scale=1.000000,Key=MouseX)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 ConsoleKey=None
 -ConsoleKeys=Tilde
