--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -59,6 +59,15 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Continue",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="Interact",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="Interact",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Enter)
++ActionMappings=(ActionName="Press A",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=A)
++ActionMappings=(ActionName="Press S",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=S)
++ActionMappings=(ActionName="Press D",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=D)
++ActionMappings=(ActionName="Press G",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=G)
++ActionMappings=(ActionName="Press Z",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Z)
++ActionMappings=(ActionName="Press X",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=X)
++ActionMappings=(ActionName="Press C",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=C)
++ActionMappings=(ActionName="Press V",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=V)
++ActionMappings=(ActionName="Press B",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=B)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Up)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=Down)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=Right)
