mouse over outline on cauldron & increase nav mesh slope

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -47,8 +47,13 @@ FixedFrameRate=60.000000
 [/Script/NavigationSystem.RecastNavMesh]
 CellSize=25.000000
 MinRegionArea=1.000000
-AgentRadius=40.000000
-AgentHeight=88.000000
+AgentRadius=35.000000
+AgentHeight=65.000000
+AgentMaxHeight=150.000000
+AgentMaxSlope=30.000000
+AgentMaxStepHeight=30.000000
+CellHeight=10.000000
+bFixedTilePoolSize=True
 
 [/Script/Engine.UserInterfaceSettings]
 UIScaleRule=ShortestSide
