Added walking anim for nakaray, nakary bp, update nav mesh for dynamic rebuild

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -54,6 +54,7 @@ AgentMaxSlope=30.000000
 AgentMaxStepHeight=30.000000
 CellHeight=10.000000
 bFixedTilePoolSize=True
+RuntimeGeneration=DynamicModifiersOnly
 
 [/Script/Engine.UserInterfaceSettings]
 UIScaleRule=ShortestSide
