--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -50,11 +50,12 @@ MinRegionArea=1.000000
 AgentRadius=35.000000
 AgentHeight=65.000000
 AgentMaxHeight=150.000000
-AgentMaxSlope=30.000000
-AgentMaxStepHeight=30.000000
+AgentMaxSlope=23.000000
+AgentMaxStepHeight=35.000000
 CellHeight=10.000000
 bFixedTilePoolSize=True
 RuntimeGeneration=DynamicModifiersOnly
+bForceRebuildOnLoad=True
 
 [/Script/Engine.UserInterfaceSettings]
 UIScaleRule=ShortestSide
@@ -136,9 +137,9 @@ bSkipAgentHeightCheckWhenPickingNavData=False
 DataGatheringMode=Instant
 bGenerateNavigationOnlyAroundNavigationInvokers=False
 ActiveTilesUpdateInterval=1.000000
-+SupportedAgents=(Name="Character",Color=(B=0,G=255,R=140,A=164),DefaultQueryExtent=(X=50.000000,Y=50.000000,Z=250.000000),NavigationDataClassName=/Script/NavigationSystem.RecastNavMesh,AgentRadius=35.000000,AgentHeight=85.000000,AgentStepHeight=-1.000000,NavWalkingSearchHeightScale=0.500000,PreferredNavData=/Script/NavigationSystem.RecastNavMesh,bCanCrouch=False,bCanJump=False,bCanWalk=True,bCanSwim=False,bCanFly=False)
-+SupportedAgents=(Name="NakaryBeast",Color=(B=0,G=255,R=140,A=164),DefaultQueryExtent=(X=50.000000,Y=50.000000,Z=250.000000),NavigationDataClassName=/Script/NavigationSystem.RecastNavMesh,AgentRadius=110.000000,AgentHeight=150.000000,AgentStepHeight=-1.000000,NavWalkingSearchHeightScale=0.500000,PreferredNavData=None,bCanCrouch=False,bCanJump=False,bCanWalk=True,bCanSwim=False,bCanFly=False)
-+SupportedAgents=(Name="Fox",Color=(B=0,G=255,R=140,A=164),DefaultQueryExtent=(X=50.000000,Y=50.000000,Z=250.000000),NavigationDataClassName=/Script/NavigationSystem.RecastNavMesh,AgentRadius=40.000000,AgentHeight=65.000000,AgentStepHeight=-1.000000,NavWalkingSearchHeightScale=0.500000,PreferredNavData=None,bCanCrouch=False,bCanJump=False,bCanWalk=True,bCanSwim=False,bCanFly=False)
++SupportedAgents=(Name="Character",Color=(B=0,G=255,R=140,A=164),DefaultQueryExtent=(X=250.000000,Y=250.000000,Z=250.000000),NavigationDataClassName=/Script/NavigationSystem.RecastNavMesh,AgentRadius=35.000000,AgentHeight=85.000000,AgentStepHeight=-1.000000,NavWalkingSearchHeightScale=0.500000,PreferredNavData=/Script/NavigationSystem.RecastNavMesh,bCanCrouch=False,bCanJump=False,bCanWalk=True,bCanSwim=False,bCanFly=False)
++SupportedAgents=(Name="NakaryBeast",Color=(B=0,G=255,R=140,A=164),DefaultQueryExtent=(X=250.000000,Y=250.000000,Z=250.000000),NavigationDataClassName=/Script/NavigationSystem.RecastNavMesh,AgentRadius=110.000000,AgentHeight=150.000000,AgentStepHeight=-1.000000,NavWalkingSearchHeightScale=0.500000,PreferredNavData=/Script/NavigationSystem.RecastNavMesh,bCanCrouch=False,bCanJump=False,bCanWalk=True,bCanSwim=False,bCanFly=False)
++SupportedAgents=(Name="Fox",Color=(B=0,G=255,R=140,A=164),DefaultQueryExtent=(X=250.000000,Y=250.000000,Z=250.000000),NavigationDataClassName=/Script/NavigationSystem.RecastNavMesh,AgentRadius=40.000000,AgentHeight=65.000000,AgentStepHeight=-1.000000,NavWalkingSearchHeightScale=0.500000,PreferredNavData=/Script/NavigationSystem.RecastNavMesh,bCanCrouch=False,bCanJump=False,bCanWalk=True,bCanSwim=False,bCanFly=False)
 DirtyAreasUpdateFreq=60.000000
 
 [/Script/Engine.PhysicsSettings]
