Clear path to boss, Prepare project for build

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -12,9 +12,9 @@ InsertPack=(PackSource="StarterContent.upack,PackName="StarterContent")
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
-BuildConfiguration=PPBC_Development
-StagingDirectory=(Path="")
-FullRebuild=True
+BuildConfiguration=PPBC_Shipping
+StagingDirectory=(Path="../../../../../../zackwong/Documents/Unreal Projects/Little Bloom/DevBuild")
+FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=True
 BlueprintNativizationMethod=Disabled
@@ -95,5 +95,4 @@ bSkipMovies=False
 +MapsToCook=(FilePath="/Game/Maps/Credits")
 bNativizeBlueprintAssets=False
 bNativizeOnlySelectedBlueprints=False
-
 
