--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -68,6 +68,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Press C",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=C)
 +ActionMappings=(ActionName="Press V",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=V)
 +ActionMappings=(ActionName="Press B",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=B)
++ActionMappings=(ActionName="Press N",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=N)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Up)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=Down)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=Right)
