--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -73,8 +73,7 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=Down)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=Right)
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=Left)
-+AxisMappings=(AxisName="serverMove",Scale=1.000000,Key=A)
-+AxisMappings=(AxisName="serverMove",Scale=-1.000000,Key=S)
++AxisMappings=(AxisName="RightClickHold",Scale=1.000000,Key=RightMouseButton)
 +AxisMappings=(AxisName="Space Bar Axis",Scale=1.000000,Key=SpaceBar)
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="Turn",Scale=1.000000,Key=MouseX)
